Fix box sizing bug on Firefox

--- a/app/assets/stylesheets/views/events/_new.css.scss
+++ b/app/assets/stylesheets/views/events/_new.css.scss
@@ -65,6 +65,7 @@ div.new-event {
       border: 1px solid darken($bg-color, 10%);
       @include border-radius(4px);
       @include box-shadow(inset 0 1px 0 #fff);
+      @include box-sizing(border-box);
       margin-bottom: 20px;
       padding: 1em;
 
